...
        }}
      />
      <Tabs.Screen
        name="plan"
        options={{
          headerShown: false,
          title: 'Plan',
          tabBarLabel: 'Plan',
          tabBarIcon: ({ color, size, focused }) => (
            <View style={{ width: size, height: size }}>
              <SymbolIcon
                name="calendar"
                size={size}
...
        }}
      />
      <Tabs.Screen
        name="shopping"
        options={{
          headerShown: false,
          title: 'Shopping',
          tabBarLabel: 'Shopping',
          tabBarIcon: ({ color, size, focused }) => (
            <View style={{ width: size, height: size }}>
              <SymbolIcon
                name={focused ? 'cart.fill' : 'cart'}
                size={size}
...
